Making the main software, Made the navigating use case, Made the loggedIn main screen